// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new flow works 1`] = `
[
  {
    "command": "start-judgement",
    "version": 2,
  },
  {
    "command": "start-group",
    "name": "Groep 1",
    "sprite": "Test",
    "tags": [],
    "visibility": "show",
  },
  {
    "command": "start-group",
    "name": "Groep 2",
    "sprite": undefined,
    "tags": [],
    "visibility": "show",
  },
  {
    "command": "start-test",
    "name": "Test 1",
    "tags": [],
  },
  {
    "command": "close-test",
    "feedback": "No correct at all!",
    "status": "wrong",
  },
  {
    "command": "close-group",
    "summary": undefined,
  },
  {
    "command": "close-group",
    "summary": undefined,
  },
]
`;

exports[`old flow works 1`] = `
[
  {
    "command": "start-judgement",
    "version": 2,
  },
  {
    "command": "start-group",
    "name": "Groep 1",
    "sprite": undefined,
    "tags": [],
    "visibility": "show",
  },
  {
    "command": "start-group",
    "name": "Groep 2",
    "sprite": undefined,
    "tags": [],
    "visibility": "show",
  },
  {
    "command": "start-test",
    "name": "Test 1",
    "tags": [],
  },
  {
    "actual": "No",
    "command": "append-diff",
    "expected": "Hallo",
  },
  {
    "command": "close-test",
    "feedback": "No correct at all!",
    "status": "wrong",
  },
  {
    "command": "close-group",
    "summary": undefined,
  },
  {
    "command": "close-group",
    "summary": undefined,
  },
]
`;
